// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtLoadMore Snap render AtLoadMore -- props className 1`] = `
<view
  class="at-load-more"
>
  <!-- loading -->
  
  <!-- more button -->
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button--normal at-button--full at-button"
    >
      <!-- web button -->
      <button
        class="at-button__wxbutton"
        lang="lang"
      />
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        查看更多
        
      </view>
    </view>
  </view>
  
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props customStyle 1`] = `
<view
  class="at-load-more"
  customstyle="color:red;"
>
  <!-- loading -->
  
  <!-- more button -->
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button--normal at-button--full at-button"
    >
      <!-- web button -->
      <button
        class="at-button__wxbutton"
        lang="lang"
      />
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        查看更多
        
      </view>
    </view>
  </view>
  
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props loadingText 1`] = `
<view
  class="at-load-more"
>
  <view
    class="at-activity-indicator at-activity-indicator--center at-activity-indicator--isopened"
  >
    <view
      class="at-activity-indicator__body"
    >
      <view
        class="at-loading"
      >
        <view
          class="at-loading__ring"
        />
        <view
          class="at-loading__ring"
        />
        <view
          class="at-loading__ring"
        />
      </view>
    </view>
    <view
      class="at-activity-indicator__content"
    >
      loadingText
    </view>
  </view>
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props moreBtnStyle 1`] = `
<view
  class="at-load-more"
>
  <!-- loading -->
  
  <!-- more button -->
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button--normal at-button--full at-button"
      style="color: red;"
    >
      <!-- web button -->
      <button
        class="at-button__wxbutton"
        lang="lang"
      />
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        查看更多
        
      </view>
    </view>
  </view>
  
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props moreText 1`] = `
<view
  class="at-load-more"
>
  <!-- loading -->
  
  <!-- more button -->
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button--normal at-button--full at-button"
    >
      <!-- web button -->
      <button
        class="at-button__wxbutton"
        lang="lang"
      />
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        moreText
        
      </view>
    </view>
  </view>
  
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props noMoreText 1`] = `
<view
  class="at-load-more"
>
  <!-- loading -->
  
  <!-- no-more tip -->
  <text
    class="at-load-more__tip"
  >
    noMoreText
  </text>
  
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props noMoreTextStyle 1`] = `
<view
  class="at-load-more"
>
  <!-- loading -->
  
  <!-- more button -->
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button--normal at-button--full at-button"
    >
      <!-- web button -->
      <button
        class="at-button__wxbutton"
        lang="lang"
      />
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        查看更多
        
      </view>
    </view>
  </view>
  
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props status === loading 1`] = `
<view
  class="at-load-more"
>
  <view
    class="at-activity-indicator at-activity-indicator--center at-activity-indicator--isopened"
  >
    <view
      class="at-activity-indicator__body"
    >
      <view
        class="at-loading"
      >
        <view
          class="at-loading__ring"
        />
        <view
          class="at-loading__ring"
        />
        <view
          class="at-loading__ring"
        />
      </view>
    </view>
    <view
      class="at-activity-indicator__content"
    >
      加载中
    </view>
  </view>
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props status === more 1`] = `
<view
  class="at-load-more"
>
  <!-- loading -->
  
  <!-- more button -->
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button--normal at-button--full at-button"
    >
      <!-- web button -->
      <button
        class="at-button__wxbutton"
        lang="lang"
      />
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        查看更多
        
      </view>
    </view>
  </view>
  
</view>
`;

exports[`AtLoadMore Snap render AtLoadMore -- props status === noMore 1`] = `
<view
  class="at-load-more"
>
  <!-- loading -->
  
  <!-- no-more tip -->
  <text
    class="at-load-more__tip"
  >
    没有更多
  </text>
  
</view>
`;

exports[`AtLoadMore Snap render initial AtLoadMore 1`] = `
<view
  class="at-load-more"
>
  <!-- loading -->
  
  <!-- more button -->
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button--normal at-button--full at-button"
    >
      <!-- web button -->
      <button
        class="at-button__wxbutton"
        lang="lang"
      />
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        查看更多
        
      </view>
    </view>
  </view>
  
</view>
`;
